--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@types/node": "^20.10.5",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "husky": "^8.0.3",
+    "typedoc": "^0.25.7",
     "typescript": "^5.3.3",
     "viem": "^1.20.3",
     "zod": "^3.22.4",
