--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "4337-gas-estimations",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "gas-estimations",
+  "version": "0.0.4",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "https://github.com/bcnmy/4337-gas-estimations.git",
   "author": "Yashasvi Chaudhary <yashasvichaudhry98@gmail.com>",
   "license": "MIT",
   "scripts": {
     "lint": "eslint . --ext .ts",
     "format": "eslint 'src' --ext .ts --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "tsc"
   },
   "dependencies": {
     "@types/node": "^20.10.5",
