test(gas-estimator): :white_check_mark: Implement smoke tests for gas estimations
Smoke tests are used to test gas estimations without actually sending any transactions or checking if the estimates are correct, but they still use real RPCs

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-# Caches 
+# Caches
 
 .cache
 
@@ -159,6 +159,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 
 .vscode-test
+.vscode/
 
 # yarn v2
 
@@ -173,3 +174,6 @@ dist
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Random stuff I don't want to commit
+dont-commit/
