--- a/package.json
+++ b/package.json
@@ -9,23 +9,34 @@
   "scripts": {
     "lint": "eslint . --ext .ts",
     "format": "eslint 'src' --ext .ts --fix",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --verbose --testPathIgnorePatterns smoke-test",
+    "test:smoke": "jest --verbose --silent=false -t smoke-test"
   },
   "dependencies": {
-    "viem": "^2.17.3",
+    "dotenv": "^16.4.5",
+    "viem": "^2.21.49",
     "zod": "^3.22.4",
     "zod-validation-error": "^2.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@biconomy/sdk": "^0.0.14",
+    "@rhinestone/module-sdk": "^0.1.28",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "jest": "^29.7.0",
     "typescript": "^5.3.3"
   }
 }
