--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-typescript": "^7.26.0",
+    "@biconomy/account": "^4.5.7",
     "@biconomy/sdk": "^0.0.17",
     "@rhinestone/module-sdk": "^0.1.28",
+    "@types/config": "^3.3.5",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "babel-jest": "^29.7.0",
+    "config": "^3.3.12",
     "eslint": "^8.25.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^9.1.0",
