chore(gas-estimator): :wastebasket: Delete legacy code

--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "zod-validation-error": "^2.1.0"
   },
   "jest": {
+    "testMatch": [
+      "**/?(*.)+(spec|test).ts"
+    ],
     "coveragePathIgnorePatterns": [
+      "dist",
       "src/legacy",
       "src/scripts",
       "src/dont-commit"
