--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "eslint 'src' --ext .ts --fix",
     "build": "tsc",
     "test": "jest --verbose",
-    "test:coverage": "jest --collect-coverage"
+    "test:coverage": "jest --collect-coverage",
+    "vitest": "vitest --run --reporter=verbose"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -51,6 +52,7 @@
     "eslint-plugin-prettier": "^5.1.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "jest": "^29.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^2.1.8"
   }
 }
