--- a/package.json
+++ b/package.json
@@ -10,26 +10,13 @@
     "lint": "eslint . --ext .ts",
     "format": "eslint 'src' --ext .ts --fix",
     "build": "tsc",
-    "test": "jest --verbose",
-    "test:coverage": "jest --collect-coverage",
-    "vitest": "vitest --run --reporter=verbose"
+    "test": "vitest --run --reporter=verbose",
+    "test:coverage": "vitest --run --reporter=verbose --coverage"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "viem": "^2.21.49",
-    "zod": "^3.22.4",
-    "zod-validation-error": "^2.1.0"
-  },
-  "jest": {
-    "testMatch": [
-      "**/?(*.)+(spec|test).ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "dist",
-      "src/legacy",
-      "src/scripts",
-      "src/dont-commit"
-    ]
+    "viem": "^2.22.8",
+    "zod": "^3.24.1",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -37,22 +24,19 @@
     "@babel/preset-typescript": "^7.26.0",
     "@biconomy/account": "^4.5.7",
     "@biconomy/sdk": "^0.0.24",
-    "@rhinestone/module-sdk": "^0.1.28",
+    "@rhinestone/module-sdk": "^0.2.3",
     "@types/config": "^3.3.5",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "babel-jest": "^29.7.0",
+    "@types/node": "^22.10.6",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "config": "^3.3.12",
-    "eslint": "^8.25.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^5.1.0",
-    "eslint-plugin-tsdoc": "^0.2.17",
-    "jest": "^29.7.0",
-    "typescript": "^5.3.3",
+    "eslint": "^9.18.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-tsdoc": "^0.4.0",
+    "typescript": "^5.7.3",
     "vitest": "^2.1.8"
   }
 }
