chore: automated docs
https://bcnmy.github.io/entry-point-gas-estimations

--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
     "changeset": "changeset",
     "changeset:release": "bun run build && changeset publish",
     "changeset:version": "changeset version && bun install --lockfile-only",
-    "changeset:release:canary": "original_name=$(bun run scripts/publish:canary.ts | grep ORIGINAL_NAME | cut -d'=' -f2) && npm publish && git checkout package.json && git tag -l '*-canary.*' | xargs git tag -d && git fetch --tags && git reset --hard && git clean -fd && echo \"Published canary version of $original_name as latest\""
+    "changeset:release:canary": "original_name=$(bun run scripts/publish:canary.ts | grep ORIGINAL_NAME | cut -d'=' -f2) && npm publish && git checkout package.json && git tag -l '*-canary.*' | xargs git tag -d && git fetch --tags && git reset --hard && git clean -fd && echo \"Published canary version of $original_name as latest\"",
+    "docs": "typedoc --tsconfig ./tsconfig.json",
+    "docs:deploy": "bun run docs && gh-pages -d docs"
   },
   "dependencies": {
     "zod": "^3.24.1",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-typescript": "^7.26.0",
     "@biconomy/account": "^4.5.7",
     "@biconomy/sdk": "^0.0.24",
     "@biomejs/biome": "1.9.4",
@@ -33,10 +32,13 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@rhinestone/module-sdk": "^0.2.3",
+    "@types/bun": "latest",
     "@types/config": "^3.3.5",
     "@types/node": "^22.10.6",
     "config": "^3.3.12",
+    "gh-pages": "^6.3.0",
     "simple-git-hooks": "^2.11.1",
+    "typedoc": "^0.27.6",
     "typescript": "^5.7.3",
     "viem": "^2.22.8",
     "vitest": "^2.1.8"
