--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@biconomy/account": "^4.5.7",
-    "@biconomy/sdk": "^0.0.24",
+    "@biconomy/sdk": "^0.0.29",
     "@biomejs/biome": "1.9.4",
     "@changesets/cli": "^2.27.11",
     "@commitlint/cli": "^19.6.1",
@@ -47,9 +47,9 @@
     "@rhinestone/module-sdk": "^0.2.3",
     "@size-limit/esbuild-why": "^11.1.6",
     "@size-limit/preset-small-lib": "^11.1.6",
-    "@types/bun": "latest",
+    "@types/bun": "^1.1.17",
     "@types/config": "^3.3.5",
-    "@types/node": "^22.10.6",
+    "@types/node": "^22.10.7",
     "config": "^3.3.12",
     "gh-pages": "^6.3.0",
     "simple-git-hooks": "^2.11.1",
@@ -57,8 +57,8 @@
     "tsup": "^8.3.5",
     "typedoc": "^0.27.6",
     "typescript": "^5.7.3",
-    "viem": "^2.22.8",
-    "vitest": "^2.1.8"
+    "viem": "^2.22.9",
+    "vitest": "^3.0.1"
   },
   "peerDependencies": {
     "viem": "^2.22.8"
