--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/bun": "^1.1.17",
     "@types/config": "^3.3.5",
     "@types/node": "^22.10.7",
+    "@vitest/coverage-v8": "^3.0.1",
     "config": "^3.3.12",
     "gh-pages": "^6.3.0",
     "simple-git-hooks": "^2.11.1",
