chore: saturate test config from env vars

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -24,16 +24,19 @@ jobs:
       - name: Create test.json
         run: |
           # Read the template and replace environment variables
-          envsubst < config/test.template.json > config/test.json
+          envsubst < config/test-example.json > config/test.json
         env:
           ALCHEMY_KEY: ${{ secrets.ALCHEMY_KEY }}
           QUICKNODE_BSC_KEY: ${{ secrets.QUICKNODE_BSC_KEY }}
           QUICKNODE_BSC_TESTNET_KEY: ${{ secrets.QUICKNODE_BSC_TESTNET_KEY }}
           INFURA_KEY: ${{ secrets.INFURA_KEY }}
           MANTLE_KEY: ${{ secrets.MANTLE_KEY }}
-          ANKR_KEY: ${{ secrets.ANKR_KEY }}
+          ANKR_KEY_ONE: ${{ secrets.ANKR_KEY_ONE }}
+          ANKR_KEY_TWO: ${{ secrets.ANKR_KEY_TWO }}
+          ANKR_KEY_THREE: ${{ secrets.ANKR_KEY_THREE }}
           NODEREAL_KEY: ${{ secrets.NODEREAL_KEY }}
-          BLAST_KEY: ${{ secrets.BLAST_KEY }}
+          BLAST_KEY_ONE: ${{ secrets.BLAST_KEY_ONE }}
+          BLAST_KEY_TWO: ${{ secrets.BLAST_KEY_TWO }}
           QUICKNODE_BLAST_SEPOLIA_KEY: ${{ secrets.QUICKNODE_BLAST_SEPOLIA_KEY }}
           QUICKNODE_BLAST_KEY: ${{ secrets.QUICKNODE_BLAST_KEY }}
           GOLD_KEY: ${{ secrets.GOLD_KEY }}
