--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "changeset:release:canary": "original_name=$(bun run scripts/publish:canary.ts | grep ORIGINAL_NAME | cut -d'=' -f2) && npm publish && git checkout package.json && git tag -l '*-canary.*' | xargs git tag -d && git fetch --tags && git reset --hard && git clean -fd && echo \"Published canary version of $original_name as latest\"",
     "docs": "typedoc --tsconfig ./tsconfig.json",
     "docs:deploy": "bun run docs && gh-pages -d docs",
-    "size": "size-limit"
+    "size": "size-limit",
+    "init:testConfig": "bun run scripts/populate:testConfig.ts"
   },
   "dependencies": {
     "zod": "^3.24.1",
@@ -52,6 +53,7 @@
     "@types/node": "^22.10.7",
     "@vitest/coverage-v8": "^3.0.1",
     "config": "^3.3.12",
+    "dotenv": "^16.4.7",
     "gh-pages": "^6.3.0",
     "simple-git-hooks": "^2.11.1",
     "size-limit": "^11.1.6",
