chore: modernise tooling (#51)
* chore: move to bun

* chore: eslint > biome

* chore move viem to peer dep

* chore: add changesets

* chore: remove .npmignore

* chore: remove babel config

* chore: automated docs

https://bcnmy.github.io/entry-point-gas-estimations

* chore: ts documentation

* chore: add e2e tests to cicd

* chore: esm + cjs builds

* chore: add size-report

* chore: add coverage

* chore: codecov badge

* chore: add full suite of tests too cicd

* chore: saturate test config from env vars

* chore: tidy

* chore: updated changelog

--- a/.gitignore
+++ b/.gitignore
@@ -71,9 +71,6 @@ web_modules/
 
 .npm
 
-# Optional eslint cache
-
-.eslintcache
 
 # Optional stylelint cache
 
@@ -180,3 +177,6 @@ dont-commit/
 
 # Config directory used for test config
 config/test.json
+
+# Docs
+docs/
