chore(gas-estimator): :fire: Remove the Sonic gas estimator
Now that Sonic has pushed a fix to make their RPC work like a normal EVM

--- a/biome.json
+++ b/biome.json
@@ -45,8 +45,7 @@
   },
   "javascript": {
     "formatter": {
-      "semicolons": "asNeeded",
-      "trailingCommas": "none"
+      "semicolons": "asNeeded"
     }
   }
 }
