--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ALCHEMY_KEY=
 QUICKNODE_BSC_KEY=
 QUICKNODE_BSC_TESTNET_KEY=
+QUICKNODE_POLYGON_KEY=
 QUICKNODE_AVAX_KEY=
 QUICKNODE_AVAX_TESTNET_KEY=
 INFURA_KEY=
