--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -44,6 +44,7 @@ jobs:
           CONDUIT_KEY: ${{ secrets.CONDUIT_KEY }}
           QUICKNODE_AVAX_TESTNET_KEY: ${{ secrets.QUICKNODE_AVAX_TESTNET_KEY }}
           QUICKNODE_AVAX_KEY: ${{ secrets.QUICKNODE_AVAX_KEY }}
+          QUICKNODE_POLYGON_KEY: ${{ secrets.QUICKNODE_POLYGON_KEY }}
           MONAD_XYZ_KEY: ${{ secrets.MONAD_XYZ_KEY }}
 
       - name: Run the tests
